workspace-sf/force-app/main/default/objects/ParametroRenovacao__c/ParametroRenovacao__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os parâmetros de renovação de uma garantia</description>
    <label>Parâmetro de renovação</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parâmetros de renovação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>