workspace-sf/force-app/main/default/objects/ParametroRenovacao__c/fields/IdadeMaximaRenovacao__c.field-meta.xml
<CustomField>
    <fullName>IdadeMaximaRenovacao__c</fullName>
    <label>Idade máxima para renovação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>