workspace-sf/force-app/main/default/objects/ParametroRenovacao__c/fields/IdadeReducaoCapital__c.field-meta.xml
<CustomField>
    <fullName>IdadeReducaoCapital__c</fullName>
    <label>Idade para redução de capital</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>