workspace-sf/force-app/main/default/objects/ParametroRenovacao__c/fields/ParametroRenovacao__c.field-meta.xml
<CustomField>
    <fullName>ParametroRenovacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parâmetro de renovação</label>
    <referenceTo>ParametroRenovacao__c</referenceTo>
    <relationshipLabel>Parâmetros de renovação</relationshipLabel>
    <relationshipName>ParametrosRenovacao</relationshipName>
    <type>Lookup</type>
</CustomField>