workspace-sf/force-app/main/default/objects/ParametroRenovacao__c/fields/PercentualReducao__c.field-meta.xml
<CustomField>
    <fullName>PercentualReducao__c</fullName>
    <label>Percentual de redução</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>