workspace-sf/force-app/main/default/objects/ParametroRenovacao__c/fields/TipoSegurado__c.field-meta.xml
<CustomField>
    <fullName>TipoSegurado__c</fullName>
    <label>Tipo de segurado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cônjuge</fullName>
            </value>
            <value>
                <fullName>Filhos</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>