workspace-sf/force-app/main/default/objects/ParametroRenovacao__c/validationRules/Parametro_Novo_Comercial.validationRule-meta.xml
<ValidationRule>
    <fullName>Parametro_Novo_Comercial</fullName>
    <active>false</active>
    <description>Impede de criar um Parâmetro de Renovação a partir de um produto comercial.</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,ISNEW() 
)</errorConditionFormula>
    <errorMessage>Não é possível criar um parâmetro de renovação a partir de um produto comercial.</errorMessage>
</ValidationRule>