workspace-sf/force-app/main/default/objects/ParametroRenovacao__c/validationRules/ValidarIdadeMaximaRenovProdutoComercial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarIdadeMaximaRenovProdutoComercial</fullName>
    <active>true</active>
    <description>Não permite que a  idade máxima de renovação seja maior que a idade máxima de renovação cadastrada no produto técnico</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;ProdutoComercial&apos;,
 IdadeMaximaRenovacao__c &gt;  ParametroRenovacao__r.IdadeMaximaRenovacao__c
)</errorConditionFormula>
    <errorMessage>A Idade máxima de renovação não pode ser maior do que foi cadastrado no produto técnico.</errorMessage>
</ValidationRule>